--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,10 @@
 .skip-link {
-    position: absolute;
-    top: -40px;
-    left: 0;
+    display: block;
     background: #2d5016;
     color: white;
-    padding: 8px;
+    padding: 12px 16px;
     text-decoration: none;
-    z-index: 100;
+    font-weight: bold;
 }
 
 .skip-link:focus {
